--- a/modulo-d/exe.01/style.css
+++ b/modulo-d/exe.01/style.css
@@ -3,6 +3,8 @@ body{
     background-color: #6494ed60;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    margin: 0px;
+    padding: 0px;
 }
 header{
     color: crimson;
@@ -12,7 +14,7 @@ section{
     background-color: #6495ed;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    width: 400px;
     margin: auto;
     box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.356);
 }
