--- a/modulo-d/exe.01/style.css
+++ b/modulo-d/exe.01/style.css
@@ -11,7 +11,7 @@ header{
     text-align: center;
 }
 section{
-    background-color: #6495ed;
+    background-color: #ffffff;
     border-radius: 10px;
     padding: 15px;
     width: 400px;
@@ -28,7 +28,7 @@ footer{
     font-style: italic;
 }
 #msg{
-    color:  cornsilk;
+    color:  crimson;
     font-size: 20px;
     font-weight: bolder;
 }
