--- a/modulo-d/exe.02/style.css
+++ b/modulo-d/exe.02/style.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
-body{
-    background-color: #6494ed60;
+body {
+    background-image:linear-gradient(to top, #6495ed, #fff8dc);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     margin: 0px;
     padding: 0px;
+    height: 97.7dvh;
 }
 header{
     color: crimson;
@@ -31,4 +32,5 @@ footer{
     color:  crimson;
     font-size: 20px;
     font-weight: bolder;
+    color: #fff8dc
 }
