--- a/modulo-d/exe.02/style.css
+++ b/modulo-d/exe.02/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-body {
+body, html {
     background-image:linear-gradient(to top, #6495ed, #fff8dc);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
